--- a/configure.in
+++ b/configure.in
@@ -358,42 +358,23 @@ mips*) CFLAGS="$CFLAGS -signed -D_BSD_SIGNALS -KPIC";
        jni_inc_dir="${JDK_DIR}/include";
        jni_md_inc_dir="${JDK_DIR}/include/solaris";
        HUP_TO_INETD="kill -HUP \`ps -e -o pid -o command | grep /usr/sbin/inetd | grep -v grep | awk '{print $1}'\`";;
-alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
-       FFLAGS="$FFLAGS -pthread";
-       IDL_LD="-expect_unresolved 'IDL_*'"
-       LDSHARE="-Wl,-so_archive ";
-       LDARC="-Wl,-no_so ";
-       LD_LDARC="-no_so ";
-       LD_LDSHARE="-so_archive ";
-       LINKSHARED="-shared ";
-       FOR_LINKSHARED="$LINKSHARED";
-       LIBPATH="LD_LIBRARY_PATH";
-       FOR_LDFLAGS="-lfor";
-       FEXECLIBDIR="-L";
-       MDSVME="mdsvme";
-       SHARETYPE=".so";
-       jni_inc_dir="/usr/include/java";
-       jni_md_inc_dir="/usr/include/java/`uname -m`";;
 *mingw*)
        MINGW="yes"
        LIBPRE=""
        LIBPTHREAD=-pthread
        SOCKETLIB="-lws2_32"
-       CFLAGS="$CFLAGS -fpic -shared-libgcc -fno-strict-aliasing";
+       CFLAGS="$CFLAGS -fpic -static-libgcc -fno-strict-aliasing -mthreads";
        FORLD="$F77";
        LD="gcc"
-       CFLAGS="$CFLAGS -m64 -mthreads"
+       CFLAGS="$CFLAGS -m64"
        LD="gcc -m64"
-       FFLAGS="$FFLAGS -m64 -mthreads"
+       FFLAGS="$FFLAGS -m64"
        FORLD="$F77 -m64"
        D64="64"
        MAKELIBDIR="\$(top_srcdir)/lib${D64}/"
        MAKESHLIBDIR="\$(top_srcdir)/lib${D64}/"
        MAKEBINDIR="\$(top_srcdir)/bin${D64}/"
-       if (test "$F77" = "g77"); then
-         FFLAGS="$FFLAGS -Wno-globals"
-         LOC="%loc"
-       elif (test "$F77" = "gfortran"); then
+       if (test "$F77" = "gfortran"); then
          FFLAGS="$FFLAGS -fno-range-check"
          LOC="loc"
        elif (($F77 --version | grep 'GNU Fortran') >/dev/null 2>&1); then
