Cleanup mingw and put bins in bindir

--- a/configure.in
+++ b/configure.in
@@ -360,30 +360,23 @@ mips*) CFLAGS="$CFLAGS -signed -D_BSD_SIGNALS -KPIC";
        jni_md_inc_dir="${JDK_DIR}/include/solaris";
        HUP_TO_INETD="kill -HUP \`ps -e -o pid -o command | grep /usr/sbin/inetd | grep -v grep | awk '{print $1}'\`";;
 *mingw*)
+       F77=gfortan
        MINGW="yes"
        LIBPRE=""
        GEN_DEVICE=""
        LIBPTHREAD=-pthread
        SOCKETLIB="-lws2_32"
        CFLAGS="$CFLAGS -fpic -static-libgcc -fno-strict-aliasing -mthreads";
-       FORLD="$F77";
        LD="gcc"
        CFLAGS="$CFLAGS -m64"
-       LD="gcc -m64"
-       FFLAGS="$FFLAGS -m64"
-       FORLD="$F77 -m64"
-       D64="64"
-       MAKELIBDIR="\$(top_srcdir)/lib${D64}/"
-       MAKESHLIBDIR="\$(top_srcdir)/lib${D64}/"
-       MAKEBINDIR="\$(top_srcdir)/bin${D64}/"
-       if (test "$F77" = "gfortran"); then
-         FFLAGS="$FFLAGS -fno-range-check"
-         LOC="loc"
-       elif (($F77 --version | grep 'GNU Fortran') >/dev/null 2>&1); then
-         FFLAGS="$FFLAGS -fno-range-check"
-         LOC="loc"
-       fi
-       FOR_LDFLAGS="-lg2c"
+       LD="gcc -m64 -static-libgcc"
+       FFLAGS="$FFLAGS -m64 -fno-range-check"
+       LOC="loc"
+       FORLD="gfortran -m64 -static-libgcc"
+       BINDIR=bin_x86_64
+       MAKELIBDIR="\$(top_srcdir)/DEVTOOLS/lib"
+       MAKESHLIBDIR="\$(top_srcdir)/$BINDIR/"
+       MAKEBINDIR="\$(top_srcdir)/$BINDIR/"
        FFLAGS="$FFLAGS -fpic -fno-backslash";
        LDSHARE="-Wl,-Bdynamic ";
        LDARC="-Wl,-Bstatic ";
