Added DESTDIR to installed locations, per https://www.gnu.org/prep/standards/html_node/DESTDIR.html

--- a/Makefile.in
+++ b/Makefile.in
@@ -104,12 +104,12 @@ $(install_DIRS):
 
 .PHONY: install
 install: $(install_DIRS)
-	$(MKDIR_P) $(prefix)/local/tdi
-	$(MKDIR_P) $(prefix)/java
-	tar cf - $(MISC_PARTS) | (cd $(exec_prefix); tar xf -)
-	if [ ! -z "$$MDSPLUS_VERSION" ]; then echo "mdsplus_version='$$MDSPLUS_VERSION'" > $(exec_prefix)/mdsobjects/python/mdsplus_version.py; fi
-	$(INSTALL) MDSplus-License.txt MDSplus-License.rtf $(exec_prefix)
-	(cd $(exec_prefix); chmod -R 755 $(MISC_PARTS))
+	$(MKDIR_P) $(DESTDIR)$(prefix)/local/tdi
+	$(MKDIR_P) $(DESTDIR)$(prefix)/java
+	tar cf - $(MISC_PARTS) | (cd $(DESTDIR)$(exec_prefix); tar xf -)
+	if [ ! -z "$$MDSPLUS_VERSION" ]; then echo "mdsplus_version='$$MDSPLUS_VERSION'" > $(DESTDIR)$(exec_prefix)/mdsobjects/python/mdsplus_version.py; fi
+	$(INSTALL) MDSplus-License.txt MDSplus-License.rtf $(DESTDIR)$(exec_prefix)
+	(cd $(DESTDIR)$(exec_prefix); chmod -R 755 $(MISC_PARTS))
 
 # Interdependent directories:
 actions: mdsshr tdishr treeshr xmdsshr mdstcpip servershr
