--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -73,7 +73,7 @@ top_srcdir = @abs_top_srcdir@
 tooldir = $(exec_prefix)/$(target_alias)
 
 
-$(sort @MAKEBINDIR@ @MAKELIBDIR@ @MAKESHLIBDIR@ @MAKEETCDIR@ @MAKEUIDDIR@ @uiddir@ $(bindir) $(libdir) $(sysconfdir)):
+$(sort @MAKEBINDIR@ @MAKELIBDIR@ @MAKESHLIBDIR@ @MAKEETCDIR@ @MAKEUIDDIR@ $(DESTDIR)@uiddir@ $(DESTDIR)$(bindir) $(DESTDIR)$(libdir) $(DESTDIR)$(sysconfdir)):
 	$(MKDIR_P) $@
 
 .DEFAULT_GOAL := all
